<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/adding"
        android:layout_width="478dp"
        android:layout_height="406dp"
        android:visibility="gone"
        app:cardBackgroundColor="#46673AB7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="145dp"
                android:text="@string/new_task"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/title_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_task_title"
                android:textColor="#455A64" />

            <EditText
                android:id="@+id/enter_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#455A64" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_task_description"
                android:textColor="#455A64" />

            <EditText
                android:id="@+id/enter_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#455A64" />

            <TextView
                android:id="@+id/DueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textColor="#455A64" />

            <EditText
                android:id="@+id/enter_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date"
                android:importantForAutofill="no"
                android:inputType="date"
                android:minHeight="48dp"
                android:textColorHint="#455A64" />

            <TextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_task_type"
                android:textColor="#455A64" />

            <Spinner
                android:id="@+id/TypeChoise"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/type"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:text="@string/add" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:text="@string/cancel" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>